--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*
+=============== 
+Variables
+===============
+*/
+:root {
+  --clr-black: #2b2929;
+  --clr-white: #ffffff;
+  --clr-grey: #bab6b5;
+  --clr-primary-3: #53373c;
+  --clr-primary-4: #5c728b;
+  --clr-primary-5: #d0202c;
+  --clr-primary-6: #6da692;
+  --clr-primary-7: #7bccb1;
+  --clr-primary-8: #92cfa6;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: var(--clr-white);
+  color: var(--clr-black);
+  line-height: 1.5;
+  font-size: 0.875rem;
+}
+body div {
+  display: block;
+}
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: var(--clr-black);
+}
+
+/* -------------------------- */
+/* Navigation */
+/* -------------------------- */
+
+.nav_wrapper {
+  background: transparent;
+  width: 100%;
+}
+.nav {
+  padding: 1.5rem 0px;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1280px;
+  width: 90%;
+}
+
+.nav a {
+  word-wrap: break-word;
+}
+.logo {
+  font-family: "Mr Dafoe", cursive;
+  letter-spacing: 0.15rem;
+  word-wrap: break-word;
+  font-size: 1.5rem;
+}
+.nav_buttons a {
+  margin-right: 1rem;
+}
+
+/* -------------------------- */
+/* Hero */
+/* -------------------------- */
+
+.hero {
+  width: 90vw;
+  margin: 0 auto;
+}
+.hero h1 {
+  text-align: center;
+}
+
+/* -------------------------- */
+/* Media */
+/* -------------------------- */
+@media screen and (min-width: 601px) {
+  .nav {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 993px) {
+  .nav {
+    width: 80%;
+  }
 }
